--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10852,6 +10852,70 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
+.select{
+	display: block;
+	width: 100%;
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
+	border-radius: 0.25rem;
+	border-width: 1px;
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+	padding-right: 2rem;
+	line-height: 1.25;
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+.select:focus{
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+.input{
+	margin-bottom: 0.5rem;
+	display: block;
+	width: 100%;
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
+	border-radius: 0.25rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+	line-height: 1.25;
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+.input:focus{
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+.label{
+	margin-bottom: 0.5rem;
+	display: block;
+	font-size: 0.75rem;
+	line-height: 1rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 0.025em;
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
 .fixed{
 	position: fixed;
 }
@@ -10943,6 +11007,10 @@ select{
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
 }
+.-mx-3{
+	margin-left: -0.75rem;
+	margin-right: -0.75rem;
+}
 .ml-1{
 	margin-left: 0.25rem;
 }
@@ -11011,6 +11079,9 @@ select{
 }
 .mt-3{
 	margin-top: 0.75rem;
+}
+.mb-6{
+	margin-bottom: 1.5rem;
 }
 .mb-2{
 	margin-bottom: 0.5rem;
@@ -11096,14 +11167,14 @@ select{
 .w-3{
 	width: 0.75rem;
 }
+.w-20{
+	width: 5rem;
+}
 .w-1\/2{
 	width: 50%;
 }
 .w-6{
 	width: 1.5rem;
-}
-.w-20{
-	width: 5rem;
 }
 .min-w-full{
 	min-width: 100%;
@@ -11177,8 +11248,8 @@ select{
 .justify-between{
 	justify-content: space-between;
 }
-.gap-3{
-	gap: 0.75rem;
+.gap-1{
+	gap: 0.25rem;
 }
 .gap-4{
 	gap: 1rem;
@@ -11239,13 +11310,13 @@ select{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
-.border-gray-400{
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
 .border-gray-500{
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+.border-gray-400{
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .border-red-500{
 	--tw-border-opacity: 1;
@@ -11267,18 +11338,6 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
-.bg-red-300{
-	--tw-bg-opacity: 1;
-	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
-}
-.bg-yellow-400{
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
-.bg-green-400{
-	--tw-bg-opacity: 1;
-	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
 .bg-indigo-500{
 	--tw-bg-opacity: 1;
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
@@ -11286,6 +11345,10 @@ select{
 .bg-blue-300{
 	--tw-bg-opacity: 1;
 	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
+.bg-green-400{
+	--tw-bg-opacity: 1;
+	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
 .bg-yellow-200{
 	--tw-bg-opacity: 1;
@@ -11377,6 +11440,10 @@ select{
 	padding-top: 0px;
 	padding-bottom: 0px;
 }
+.px-3{
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
 .px-2{
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
@@ -11390,17 +11457,17 @@ select{
 .pt-2{
 	padding-top: 0.5rem;
 }
-.pb-4{
-	padding-bottom: 1rem;
-}
 .pl-2{
 	padding-left: 0.5rem;
+}
+.pr-2{
+	padding-right: 0.5rem;
 }
 .pr-4{
 	padding-right: 1rem;
 }
-.pr-2{
-	padding-right: 0.5rem;
+.pb-4{
+	padding-bottom: 1rem;
 }
 .pr-8{
 	padding-right: 2rem;
@@ -11792,8 +11859,24 @@ select{
 
 @media (min-width: 768px){
 
+	.md\:mb-0{
+		margin-bottom: 0px;
+	}
+
 	.md\:w-6\/12{
 		width: 50%;
+	}
+
+	.md\:w-1\/2{
+		width: 50%;
+	}
+
+	.md\:w-1\/3{
+		width: 33.333333%;
+	}
+
+	.md\:w-1\/4{
+		width: 25%;
 	}
 
 	.md\:grid-cols-2{
