--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,4 +25,16 @@
         @apply block text-sm font-medium text-gray-700 uppercase;
     }
 
+    .select {
+        @apply block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-2 px-3 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500
+    }
+
+    .input {
+        @apply appearance-none block w-full bg-gray-200 text-gray-700 rounded py-2 px-3 mb-2 leading-tight focus:outline-none focus:bg-green-200
+    }
+
+    .label {
+        @apply block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2
+    }
+
 }
